--- a/Vjezba8/Vjezba8/Vjezba8.vcxproj
+++ b/Vjezba8/Vjezba8/Vjezba8.vcxproj
@@ -19,13 +19,19 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Direktorij.c" />
     <ClCompile Include="Source.c" />
+    <ClCompile Include="Stack.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Direktorij.h" />
+    <ClInclude Include="Stack.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{10EA2281-B50C-4337-A15B-895F9CB20182}</ProjectGuid>
     <RootNamespace>Vjezba8</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
